tests/baselines/reference/annotationDeclarationFieldTypeError14.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError14.ets(2,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'never'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError14.ets (1 errors) ====
    @interface Anno {
        a: never
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'never'.
    }